--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 clap = { version = "4.2.1", features = ["derive"] }
 termcolor = "1.2.0"
@@ -20,3 +18,5 @@ reqwest = { version = "0", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0", features = ["serde"] }
+proc-macro2 = "1"
+quote = "1"
